avahi (0.6.9-9) UNRELEASED; urgency=low

  [ Sjoerd Simons ]
  * Don't build-depend on libcap-dev on hurd, kfreebsd-* and netbsd-i386 archs
    (Closes: #360596)

  [ Sebastian Dröge ]
  * debian/patches/07_avahi-sharp_missing_lock.patch (SVN rev 1188):
    + Add a missing lock around the avahi_entry_group_add_service_strlst()
      call (Closes: #348999)

 -- Sebastian Dröge <slomo@ubuntu.com>  Tue, 18 Apr 2006 16:12:29 +0200

avahi (0.6.9-8) unstable; urgency=medium

  * Pass --disable-mono --disable-monodoc to configure on ia64 and powerpc.
    This makes the fix in the previous package actually usefull.

 -- Sjoerd Simons <sjoerd@debian.org>  Tue,  4 Apr 2006 00:33:58 +0200

avahi (0.6.9-7) unstable; urgency=medium

  [ Sebastian Dröge ]
  * debian/patches/05_empty_service_directory.patch:
    + updated to use upstream's solution for this which is much cleaner.

  [ Sjoerd Simons ]
  * Urgency medium. Recent version include some big bug-fixes wrt. the testing
    version. (i.e. it actually works on sparc64 and ppc64)
  * Only build the mono library on i386 and amd64 for now. Other architectures
    can't install the mono build-deps currently.

 -- Sjoerd Simons <sjoerd@debian.org>  Tue,  4 Apr 2006 00:02:16 +0200

avahi (0.6.9-6) unstable; urgency=low

  [ Sjoerd Simons ]
  * Also ship docs/NEWS (Closes: #355267)
  * Don't let libavahi-client3 recommend avahi-daemon. Let the end-user apps
    decide if they want to recommend avahi-daemon or not. (Closes: #357416)
  * debian/patches/99_autotools.patch
    + Added. Update the autotools files so 
    debian/patches/02_pthread_flags.patch actually has effect. Fixes ftbs on
    mips (Closes: #358304)

  [ Sebastian Dröge ]
  * debian/patches/04_initscript_log_end_msg.patch:
    + Replace exit statements with return, otherwise log_end_msg might not
      be called after d_start. Patch by Benjamin Leipold. (Closes: #358190)
  * debian/patches/05_empty_service_directory.patch: