@@ -1,0 +1,1 @@
+/usr/lib/cli/avahi-sharp-1.0/avahi-sharp.dll
